Aggiornata pagina "Azienda"

--- a/frontend/src/app/routes/azienda/azienda.component.html
+++ b/frontend/src/app/routes/azienda/azienda.component.html
@@ -6,7 +6,7 @@
                  src="https://fai-platform.imgix.net/media/convenzioni/veneto/vr/biblioteca-capitolare-di-verona_178796.jpg">
         </div>
         <div class="text">
-            <h1>Lorem Ipsum</h1>
+            <h1>La nostra azienda</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras dapibus iaculis euismod. Mauris urna sem,
                 faucibus ut risus quis, interdum lacinia elit. Etiam tincidunt urna tristique orci laoreet sagittis.
                 Donec sapien odio, imperdiet vitae pellentesque a, mattis ornare est. Curabitur sollicitudin felis
@@ -27,7 +27,7 @@
 
     <div class="area">
         <div class="text">
-            <h1>Lorem Ipsum</h1>
+            <h1>Chi siamo</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras dapibus iaculis euismod. Mauris urna sem,
                 faucibus ut risus quis, interdum lacinia elit. Etiam tincidunt urna tristique orci laoreet sagittis.
                 Donec sapien odio, imperdiet vitae pellentesque a, mattis ornare est. Curabitur sollicitudin felis
@@ -55,7 +55,7 @@
                  src="https://www.regione.taa.it/var/opencitytaa/storage/images/media/images/biblioteca/1896979-3-ita-IT/Biblioteca_reference.jpg">
         </div>
         <div class="text">
-            <h1>Lorem Ipsum</h1>
+            <h1>Come contattarci</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras dapibus iaculis euismod. Mauris urna sem,
                 faucibus ut risus quis, interdum lacinia elit. Etiam tincidunt urna tristique orci laoreet sagittis.
                 Donec sapien odio, imperdiet vitae pellentesque a, mattis ornare est. Curabitur sollicitudin felis
