--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -121,16 +121,36 @@
   margin-right: 1rem;
 }
 
+@keyframes fade {
+  0%, 100% {
+    opacity: 0
+  }
+  10% {
+    opacity: 1
+  }
+  90%{
+    opacity: 1;
+  }
+}
+
 .error-container {
-  width: 100%;
+  width: 98%;
   background: red;
-  border-radius: 0.4rem;
+
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+
   padding: 0.4rem;
   margin: 0.4rem;
+  border-radius: 0.4rem;
+
+  position: absolute;
+  top: -3rem;
+
+  opacity: 1;
+  animation: fade 5s linear;
 }
 
 .error-container > span {
