--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,16 +1,32 @@
 <footer>
-  <div class="social-icons">
-    <a href="http://github.com/angelobdev" target="_blank">
-      <fa-icon [icon]="faGithub"></fa-icon>
-    </a>
-    <a href="http://linkedin.com/in/angelobdev" target="_blank">
-      <fa-icon [icon]="faLinkedin"></fa-icon>
-    </a>
-    <a href="http://twitter.com/angelobdev" target="_blank">
-      <fa-icon [icon]="faTwitter"></fa-icon>
-    </a>
+  <div class="area left">
+    <span>La Casa del Libro</span>
+    <span>Progetto di Piattaforme e Sistemi Web</span>
+    <span>Angelo Belcastro, MAT. 209893</span>
+    <span>A.A. 2022-2023</span>
   </div>
-  <div class="credits">
-    <span>Powered by <a href="https://github.com/angelobdev">angelobdev</a></span>
+  <div class="area center">
+    <br>
+    <br>
+    <br>
+    <span>
+      <a href="http://github.com/angelobdev" target="_blank">
+        <fa-icon [icon]="faGithub"></fa-icon>
+      </a>
+      <a href="http://linkedin.com/in/angelobdev" target="_blank">
+        <fa-icon [icon]="faLinkedin"></fa-icon>
+      </a>
+      <a href="http://twitter.com/angelobdev" target="_blank">
+        <fa-icon [icon]="faTwitter"></fa-icon>
+      </a>
+    </span>
+  </div>
+  <div class="area right">
+    <span>Tecnologie utilizzate:</span>
+    <span>Spring Boot + Spring Security (REST API)</span>
+    <span>Angular 16 (Frontend)</span>
+    <span>PostgreSQL 15 (Database)</span>
   </div>
 </footer>
+
+
