UI/UX Improvements

--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -15,7 +15,7 @@ header {
   justify-content: center;
   flex-direction: row;
 
-  background: #E09F3E;
+  background: #2F4858;
 
   box-shadow: 0 2px 2px #0004;
 }
@@ -44,7 +44,7 @@ header .logo:hover {
 header .logo span {
   font-family: "Pacifico", sans-serif;
   font-size: 1.8rem;
-  color: #393A10;
+  color: #FF8600;
   text-shadow: 0 2px #0004;
 }
 
