Aggiunto supporto per casa editrice

--- a/frontend/src/app/routes/biblioteca/biblioteca.component.html
+++ b/frontend/src/app/routes/biblioteca/biblioteca.component.html
@@ -23,7 +23,7 @@
         <img alt="{{libro.titolo}}" [src]="libro.copertina">
         <div class="title">
           <h2>{{libro.titolo}}</h2>
-          <h3>di {{libro.autore}}</h3>
+          <h3>di {{libro.autore}}<br>{{libro.editore}}</h3>
         </div>
         <div class="right-bar">
           <p>{{libro.etaMinima}}+</p>
