Implementata gestione account + bug fix

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -60,7 +60,7 @@
       <span>oppure</span>
     </div>
     <br>
-    <a routerLink="#" (click)="switchLoginRegister()">Registrati</a>
+    <button (click)="switchLoginRegister()">Registrati</button>
   </div>
 </div>
 
@@ -202,6 +202,6 @@
       <span>oppure</span>
     </div>
     <br>
-    <a routerLink="#" (click)="switchLoginRegister()">Torna al Login</a>
+    <button (click)="switchLoginRegister()">Torna al Login</button>
   </div>
 </div>
