--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,6 +1,7 @@
 .container {
   padding-top: 3.6rem;
   width: 100%;
+  min-height: calc(100vh - 11.5rem);
 
   display: flex;
   justify-content: flex-start;
