--- a/frontend/src/app/components/footer/footer.component.scss
+++ b/frontend/src/app/components/footer/footer.component.scss
@@ -2,8 +2,8 @@ footer {
   background: #2F4858;
 
   width: 100%;
-  padding-top: 0.4rem;
-  padding-bottom: 0.4rem;
+  height: 6rem;
+
 
   display: flex;
   align-items: center;
@@ -25,14 +25,14 @@ footer .area span {
   color: white;
 }
 
-footer .area span a  {
-  color:white;
+footer .area span a {
+  color: white;
   font-size: 1.2rem;
   padding: 0.2rem;
   transition: 0.4s;
 }
 
-footer .area span a:hover{
+footer .area span a:hover {
   color: #fff9;
   transition: 0.4s;
 }
