--- a/frontend/src/app/routes/biblioteca/biblioteca.component.scss
+++ b/frontend/src/app/routes/biblioteca/biblioteca.component.scss
@@ -104,7 +104,7 @@
   width: 99%;
   display: inline-grid;
   grid-template-columns: repeat(4, 1fr);
-  gap: 10px;
+  gap: 0.6rem;
   margin-top: 1rem;
 }
 
