--- a/frontend/src/app/routes/biblioteca/biblioteca.component.scss
+++ b/frontend/src/app/routes/biblioteca/biblioteca.component.scss
@@ -196,11 +196,11 @@
 }
 
 .bookshelf .book .description a {
-  color:blue;
+  color: blue;
   text-decoration: underline;
 }
 
-.bookshelf .book .description a:hover{
+.bookshelf .book .description a:hover {
   cursor: pointer;
 }
 
@@ -227,8 +227,8 @@
   margin-bottom: 1rem;
 }
 
-.bookshelf .book .buttons button {
-  width: 100%;
+.bookshelf .book .buttons .acquista {
+  width: 80%;
   height: 2rem;
   color: white;
   border: none;
@@ -238,12 +238,34 @@
   background: #758BFD;
 }
 
-.bookshelf .book .buttons button:hover {
+.bookshelf .book .buttons .acquista:hover {
   transition: 0.2s;
   transform: scale(102%);
   background: #aebbfa;
 }
 
-.bookshelf .book .buttons button:active {
+.bookshelf .book .buttons .acquista:active {
   background: #c9d1fa;
 }
+
+.bookshelf .book .buttons .like {
+  width: 18%;
+  height: 100%;
+  border: none;
+  background: transparent;
+  font-size: 1.8rem;
+  color: red;
+  transition: 0.4s;
+}
+
+.bookshelf .book .buttons .like:hover {
+  color: #9a0000;
+  transition: 0.4s;
+}
+
+.bookshelf .book .buttons .like:active {
+  color: #c57575;
+  transition: 0.2s;
+}
+
+
