Fix icona avatar

--- a/frontend/src/app/components/header/header.component.scss
+++ b/frontend/src/app/components/header/header.component.scss
@@ -103,6 +103,7 @@ header nav .right-content > button:active {
 }
 
 .avatar {
+  width: 1.8rem;
   height: 1.8rem;
   object-fit: cover;
   margin-right: 0.4rem;
